--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,16 +1,11 @@
-#contact {
-    font-family: 'Gothic+A1', sans-serif;
-
-    background-image: url('https://1.bp.blogspot.com/-VHB4iAs11A4/XdKECk5GCkI/AAAAAAAAHMA/Bw5IYcni3fU59IKHI7x6ssnykqTj8y33ACLcBGAsYHQ/s1600/bg.png');
-    background-repeat: repeat;
-    
+#contact {    
     h2 {
         font-size: 2.5rem;
         color: $dark;
     }
 
     p {
-        font-size: 1.3rem;
+        font-size: 1.2em;
         color: $dark;
     }
 
@@ -101,7 +96,7 @@
         padding: 6em 0;
 
         p {
-            font-size: 1.2rem;
+            font-size: 1.1rem;
         }
     }
 
