--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -65,7 +65,7 @@ header.masthead {
     color: #fff;
     background-color: rgba(0, 127, 255, 0.75);
     font-weight: bold;
-    border-radius: 2px;
+    border-radius: 2rem;
     padding: 1px 1px 2px 1px;
     opacity: 0.8;
   }
