--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -66,7 +66,7 @@ header.masthead {
     background-color: rgba(0, 127, 255, 0.75);
     font-weight: bold;
     border-radius: 2rem;
-    padding: 1px 1px 2px 1px;
+    padding: 0.3rem 1.5rem;
     opacity: 0.8;
   }
 
