--- a/css/creative.css
+++ b/css/creative.css
@@ -10839,7 +10839,7 @@ header.masthead {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-size: cover;
+  background-size: auto 100%;
 }
 
 @media (max-width: 767.98px) {
