--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -8,7 +8,7 @@ header.masthead {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-size: cover;
+  background-size: auto 100%;
 
   @include media-breakpoint-down(sm) {
     background: linear-gradient(to bottom, #{fade-out($secondary, .4)} 0%, #{fade-out($secondary, .4)} 100%),
