--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -30,7 +30,7 @@ header.masthead {
     font-family: 'Gothic+A1', sans-serif;
     color: white;
     padding-bottom: .5rem;
-    margin-bottom: 0;
+    margin-bottom: 0;;
   }
 
   .btn {
