--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -62,8 +62,7 @@ header.masthead {
   }
 
   b {
-    color: #fff;
-    background-color: rgba(0, 127, 255, 0.75);
+    color: rgba(0, 127, 255, 0.75);
     font-weight: bold;
     border-radius: 2rem;
     padding: 0.3rem 1.5rem;
