--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -62,7 +62,7 @@ header.masthead {
   }
 
   b {
-    color: rgba(255, 0, 0, 0.75);
+    color: $gray-100;
     font-weight: bold;
     border-radius: 2rem;
     padding: 0.3rem 1.5rem;
