--- a/css/creative.css
+++ b/css/creative.css
@@ -10894,7 +10894,7 @@ header.masthead .btn-red:hover {
 }
 
 header.masthead b {
-  color: rgba(255, 0, 0, 0.75);
+  color: #f8f9fa;
   font-weight: bold;
   border-radius: 2rem;
   padding: 0.3rem 1.5rem;
