--- a/css/creative.css
+++ b/css/creative.css
@@ -10996,10 +10996,8 @@ header.masthead #scroll-down i {
 }
 
 #why b {
-  color: #555555;
-  background-color: #ffd300;
-  font-weight: bold;
-  border-radius: 2px;
+  color: #fff;
+  background-color: #328ff2;
 }
 
 #why h2 {
