--- a/scss/_why.scss
+++ b/scss/_why.scss
@@ -4,10 +4,8 @@
 	font-family: 'Gothic+A1', sans-serif;
 
 	b {
-		color: $dark;
-		background-color: $gold;
-		font-weight: bold;
-		border-radius: 2px;
+		color: $white;
+		background-color: #328ff2;
 	}
 
 	h2{
