--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -63,7 +63,7 @@ header.masthead {
 
   b {
     color: $gray-100;
-    font-weight: bold;
+    font-weight: 500;
     border-radius: 2rem;
     padding: 0.3rem 1.5rem;
     opacity: 0.8;
