--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -36,4 +36,16 @@
 			font-size: 1rem;
 		}
 	}
+
+	.shadow-left {
+		@include media-breakpoint-up(md) {
+			box-shadow: -15px 10px 10px rgba(163, 163, 163, 0.7);
+		}
+	}
+
+	.shadow-right {
+		@include media-breakpoint-up(md) {
+			box-shadow: 15px 10px 10px rgba(163, 163, 163, .7);
+		}
+	}
 }
