--- a/scss/_install.scss
+++ b/scss/_install.scss
@@ -23,8 +23,8 @@
     }
 
     b1 {
-        color: #fff;
-        background-color: rgba(255, 16, 0, 0.75);
+        color: $white;
+        background-color: #328ff2;
         font-weight: bold;
         border-radius: 2px;
     }
