--- a/css/creative.css
+++ b/css/creative.css
@@ -11317,7 +11317,7 @@ header.masthead #scroll-down i {
 
 #install b1 {
   color: #fff;
-  background-color: rgba(255, 16, 0, 0.75);
+  background-color: #328ff2;
   font-weight: bold;
   border-radius: 2px;
 }
