--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -26,11 +26,10 @@ header.masthead {
   }
 
   p {
-    font-size: 1.2rem;
-    font-family: 'Gothic+A1', sans-serif;
+    font-size: 0.95rem;
     color: white;
     padding-bottom: .5rem;
-    margin-bottom: 0;;
+    margin-bottom: 0;
   }
 
   .btn {
@@ -120,11 +119,7 @@ header.masthead {
     }
 
     h2 {
-      font-size: 1.3rem;
-    }
-
-    p {
-      font-size: 1.3rem;
+      font-size: 1.5rem;
     }
   }
 
@@ -133,10 +128,6 @@ header.masthead {
     min-height: 40rem;
     padding-top: $navbar-height;
     padding-bottom: 0;
-
-    p {
-      font-size: 1.3;
-    }
   }
 
   @include media-breakpoint-up(xl) {
@@ -146,10 +137,6 @@ header.masthead {
 
     h2 {
       font-size: 1.8rem;
-    }
-
-    p {
-      font-size: 1.5rem;
     }
   }
 }
