--- a/css/creative.css
+++ b/css/creative.css
@@ -10892,12 +10892,16 @@ header.masthead .btn-red:hover {
   background-color: #df7c19;
 }
 
-header.masthead b {
+header.masthead bw {
   color: #f8f9fa;
   font-weight: 500;
-  border-radius: 2rem;
-  padding: 0.3rem 1.5rem;
-  opacity: 0.8;
+  opacity: 0.85;
+}
+
+header.masthead b {
+  color: #fff;
+  background-color: #328ff2;
+  opacity: 0.85;
 }
 
 header.masthead span {
