--- a/css/creative.css
+++ b/css/creative.css
@@ -10723,6 +10723,46 @@ hr.light {
   height: 100%;
 }
 
+.img-hover-container {
+  position: relative;
+  width: 100%;
+}
+
+.img-hover-image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.img-hover-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  background-color: rgba(0, 140, 186, 0.7);
+}
+
+.img-hover-container:hover .img-hover-overlay {
+  opacity: 1;
+}
+
+.img-hover-text {
+  color: white;
+  font-size: .9rem;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
 #mainNav {
   -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
           box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
