--- a/scss/_install.scss
+++ b/scss/_install.scss
@@ -11,7 +11,7 @@
     }
 
     p {
-        font-size: 1.2rem;
+        font-size: 1.1rem;
         color: $dark;
     }
 
@@ -32,6 +32,12 @@
     @include media-breakpoint-down(sm) {
         p {
             font-size: 1.1rem;
+        }
+    }
+
+    @include media-breakpoint-down(lg) {
+        p {
+            font-size: 1rem;
         }
     }
 }
