--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -10,7 +10,11 @@ header.masthead {
 
   @include media-breakpoint-down(sm) {
     background: linear-gradient(to bottom, #{fade-out($secondary, .4)} 0%, #{fade-out($secondary, .4)} 100%),
-    url('https://1.bp.blogspot.com/-Xsnk0lQGhC4/Xfap0STdEyI/AAAAAAAAHfY/8_gWx05QTEssYlH1HtJHIqA4Hu9K1OmjACLcBGAsYHQ/s1600/bg-masterhead3.jpg');
+    url('../img/m_bg.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
   }
 
   @include media-breakpoint-up(xl) {
