--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -130,10 +130,12 @@ header.masthead {
 
     h1 {
       font-size: 2.5rem;
+      opacity: .65;
     }
 
     h2 {
       font-size: 1.5rem;
+      opacity: .65;
     }
   }
 
