--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -138,7 +138,8 @@ header.masthead {
 
     video {
       position: relative;
-      top: 100px;
+      top: 7.5rem;
+      margin-bottom: 1rem;
     }
   }
 
