--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -126,9 +126,10 @@ header.masthead {
   }
 
   @include media-breakpoint-down(sm) {
-    padding-top: 6.5rem !important;
+    padding-top: 7.5rem !important;
 
     h1 {
+      margin-top: 1rem;
       font-size: 2.5rem;
     }
 
@@ -138,8 +139,7 @@ header.masthead {
 
     video {
       position: relative;
-      top: 7.5rem;
-      margin-bottom: 1rem;
+      top: 5rem;
     }
   }
 
