--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -126,7 +126,8 @@ header.masthead {
   }
 
   @include media-breakpoint-down(sm) {
-    padding-top: 7.5rem !important;
+    padding-top: 6.5rem !important;
+    padding-bottom: 1rem;
 
     h1 {
       margin-top: 1rem;
@@ -139,7 +140,8 @@ header.masthead {
 
     video {
       position: relative;
-      top: 5rem;
+      margin-top: 10rem;
+      padding: 0;
     }
   }
 
@@ -150,7 +152,7 @@ header.masthead {
     padding-bottom: 0;
   }
 
-  
+
 
   @include media-breakpoint-up(xl) {
     h1 {
