--- a/css/creative.css
+++ b/css/creative.css
@@ -10995,7 +10995,7 @@ header.masthead .overlay {
 @media (max-width: 767.98px) {
   header.masthead {
     padding-top: 6.5rem !important;
-    padding-bottom: 1rem;
+    padding-bottom: 0;
   }
   header.masthead h1 {
     margin-top: 1rem;
@@ -11004,10 +11004,19 @@ header.masthead .overlay {
   header.masthead h2 {
     font-size: 1.5rem;
   }
+  header.masthead .overlay {
+    background-image: url("../img/m_bg.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    opacity: 1;
+  }
   header.masthead video {
     position: relative;
     margin-top: 10rem;
     padding: 0;
+    z-index: 5;
   }
 }
 
