--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -127,7 +127,7 @@ header.masthead {
 
   @include media-breakpoint-down(sm) {
     padding-top: 6.5rem !important;
-    padding-bottom: 1rem;
+    padding-bottom: 0;
 
     h1 {
       margin-top: 1rem;
@@ -138,10 +138,20 @@ header.masthead {
       font-size: 1.5rem;
     }
 
+    .overlay {
+      background-image: url('../img/m_bg.jpg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: scroll;
+      background-size: cover;
+      opacity: 1;
+    }
+
     video {
       position: relative;
       margin-top: 10rem;
       padding: 0;
+      z-index: 5;
     }
   }
 
