--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -127,7 +127,7 @@ header.masthead {
 
   @include media-breakpoint-down(sm) {
     padding-top: 6.5rem !important;
-    padding-bottom: 0;
+    padding-bottom: 1rem;
 
     h1 {
       margin-top: 1rem;
