★ 블로그, 문의 삭제 ★ why 섹션 내용 변경 feature 섹션을 실습 섹션으로 변환할 예정

--- a/css/creative.css
+++ b/css/creative.css
@@ -11020,7 +11020,7 @@ header.masthead .overlay {
 
 @media (min-width: 992px) {
   header.masthead {
-    height: 75vh;
+    height: 70vh;
     min-height: 40rem;
     padding-top: 75px;
     padding-bottom: 0;
@@ -11057,11 +11057,21 @@ header.masthead .overlay {
   color: #000000;
   font-size: 2rem;
   font-weight: 900;
+  margin-bottom: 1rem;
 }
 
 #why p {
   font-size: 1.1rem;
-  margin-bottom: .1rem;
+  margin-bottom: .5rem;
+}
+
+@media (max-width: 991.98px) {
+  #why h2 {
+    font-size: 1.6rem;
+  }
+  #why p {
+    margin-bottom: 1rem;
+  }
 }
 
 #features {
