--- a/scss/_why.scss
+++ b/scss/_why.scss
@@ -12,13 +12,23 @@
 		color: $black;
 		font-size: 2rem;
 		font-weight: 900;
+		margin-bottom: 1rem;
 	}
 
 	p {
 		font-size: 1.1rem;
-		margin-bottom: .1rem;
+		margin-bottom: .5rem;
 	}
 
+	@include media-breakpoint-down(md) {
+		h2 {
+			font-size: 1.6rem;
+		}
+
+		p{
+			margin-bottom: 1rem;
+		}
+	}
 
 	@include media-breakpoint-down(lg) {
 
