--- a/css/creative.css
+++ b/css/creative.css
@@ -10781,6 +10781,10 @@ hr.light {
   }
 }
 
+#mainNav .big-size {
+  font-size: 1.7rem !important;
+}
+
 #mainNav .navbar-brand {
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
