--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -14,6 +14,10 @@
     }
   }
 
+  .big-size {
+    font-size: 1.7rem !important;
+  }
+
   .navbar-brand {
     font-family: $font-family-sans-serif;
     font-weight: $font-weight-bold;
