--- a/scss/creative.scss
+++ b/scss/creative.scss
@@ -10,6 +10,6 @@
 @import "./_masthead.scss";
 @import "./_why.scss";
 @import "./_features.scss";
-@import "./_blog.scss";
+//@import "./_blog.scss";
 @import "./_install.scss";
-@import "./_contact.scss";
+//@import "./_contact.scss";
