--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -123,6 +123,7 @@ header.masthead {
   }
 
   @include media-breakpoint-down(sm) {
+    min-height: 45rem;
     padding-top: 6.5rem !important;
     padding-bottom: 2rem;
 
@@ -153,7 +154,7 @@ header.masthead {
     }
   }
 
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(md) {
     height: 70vh;
     min-height: 40rem;
     padding-top: $navbar-height;
