--- a/css/creative.css
+++ b/css/creative.css
@@ -10994,6 +10994,7 @@ header.masthead .overlay {
 
 @media (max-width: 767.98px) {
   header.masthead {
+    min-height: 45rem;
     padding-top: 6.5rem !important;
     padding-bottom: 2rem;
   }
@@ -11021,7 +11022,7 @@ header.masthead .overlay {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   header.masthead {
     height: 70vh;
     min-height: 40rem;
