--- a/css/creative.css
+++ b/css/creative.css
@@ -11017,7 +11017,7 @@ header.masthead .overlay {
   header.masthead video {
     position: relative;
     margin-top: 7.5rem;
-    padding: 0;
+    padding: 0 1rem;
     z-index: 5;
   }
 }
