--- a/css/creative.css
+++ b/css/creative.css
@@ -11017,8 +11017,9 @@ header.masthead .overlay {
   header.masthead video {
     position: relative;
     margin-top: 7.5rem;
-    padding: 0 1rem;
+    padding: 0 1.5rem;
     z-index: 5;
+    border-radius: 5px;
   }
 }
 
