--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -151,6 +151,7 @@ header.masthead {
       margin-top: 7.5rem;
       padding: 0 1.5rem;
       z-index: 5;
+      border-radius: 5px;
     }
   }
 
