Mechanism 섹션에 owl carousel 적용

--- a/scss/creative.scss
+++ b/scss/creative.scss
@@ -13,4 +13,4 @@
 //@import "./_blog.scss";
 @import "./_install.scss";
 //@import "./_contact.scss";
-@import "./_mechanism.scss"
+@import "./_mechanism.scss";
