--- a/css/creative.css
+++ b/css/creative.css
@@ -10887,20 +10887,17 @@ header.masthead {
 
 header.masthead h1 {
   font-size: 3rem;
-  text-shadow: 5px 3px 3px #333333;
 }
 
 header.masthead h2 {
   font-weight: 800;
   font-size: 1.7rem;
-  text-shadow: 5px 3px 3px #333333;
 }
 
 header.masthead p {
   font-size: 0.95rem;
   padding-bottom: .5rem;
   margin-bottom: 0;
-  text-shadow: 1px 1px 1px black;
 }
 
 header.masthead .btn:focus {
@@ -10988,8 +10985,8 @@ header.masthead .overlay {
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: #242222;
-  opacity: 0.4;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(85, 85, 85, 0.3)), to(rgba(85, 85, 85, 0.3)));
+  background-image: linear-gradient(to bottom, rgba(85, 85, 85, 0.3) 0%, rgba(85, 85, 85, 0.3) 100%);
   z-index: 1;
 }
 
@@ -11050,11 +11047,6 @@ header.masthead .overlay {
   word-break: keep-all;
   color: #555555;
   font-family: 'Gothic+A1', sans-serif;
-}
-
-#why b {
-  color: #fff;
-  background-color: #328ff2;
 }
 
 #why h2 {
@@ -11171,10 +11163,6 @@ header.masthead .overlay {
   #install p {
     font-size: 1rem;
   }
-}
-
-#mechanism {
-  display: inline-block;
 }
 
 #mechanism h2 {
