--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -12,20 +12,17 @@ header.masthead {
 
   h1 {
     font-size: 3rem;
-    text-shadow: 5px 3px 3px #333333;
   }
 
   h2 {
     font-weight: 800;
     font-size: 1.7rem;
-    text-shadow: 5px 3px 3px #333333;
   }
 
   p {
     font-size: 0.95rem;
     padding-bottom: .5rem;
     margin-bottom: 0;
-    text-shadow: 1px 1px 1px black;
   }
 
   .btn {
@@ -118,8 +115,7 @@ header.masthead {
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: #242222;
-    opacity: 0.4;
+    background-image: linear-gradient(to bottom, #{fade-out($secondary, .7)} 0%, #{fade-out($secondary, .7)} 100%);
     z-index: 1;
   }
 
