--- a/css/creative.css
+++ b/css/creative.css
@@ -11165,9 +11165,37 @@ header.masthead .overlay {
   }
 }
 
-#mechanism h2 {
-  font-size: 2.5rem;
+#solution {
+  word-break: keep-all;
   color: #555555;
-  z-index: 10;
-  padding: 1rem;
 }
+
+#solution b {
+  font-weight: bold;
+}
+
+#solution h2 {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+#solution p {
+  font-size: 1.1rem;
+  font-weight: 500;
+}
+
+@media (max-width: 767.98px) {
+  #solution h2 {
+    font-size: 1.7rem;
+  }
+}
+
+@media (max-width: 991.98px) {
+  #solution h2 {
+    font-size: 1.7rem;
+  }
+  #solution p {
+    font-size: 1rem;
+  }
+}
+/*# sourceMappingURL=creative.css.map */
