--- a/scss/creative.scss
+++ b/scss/creative.scss
@@ -13,4 +13,5 @@
 //@import "./_blog.scss";
 @import "./_install.scss";
 //@import "./_contact.scss";
-@import "./_mechanism.scss";
+//@import "./_mechanism.scss";
+@import "./_solution.scss";
