--- a/scss/_solution.scss
+++ b/scss/_solution.scss
@@ -8,7 +8,6 @@
 
 	h2 {
 		font-size: 2rem;
-		font-weight: 600;
 	}
 
 	p {
@@ -19,7 +18,7 @@
 	@include media-breakpoint-down(md) {
 		h2 {
 			font-size: 1.5rem;
-			font-weight: 700;
+			text-align: left !important;
 		}
 		p {
 			font-size: 1rem;
