--- a/scss/_install.scss
+++ b/scss/_install.scss
@@ -1,41 +1,21 @@
 #install {
     overflow: hidden;
-    color: #454545;
+    color: $dark;
     word-break: keep-all;
 
-    h2,
-    h3,
-    h4 {
-        font-size: 2.5rem;
-        color: $dark;
+    h2 {
+        font-size: 2rem;
     }
 
     p {
         font-size: 1.1rem;
-        color: $dark;
     }
 
-    b {
-        color: $dark;
-        background-color: $gold;
-        font-weight: bold;
-        border-radius: 2px;
-    }
-
-    b1 {
-        color: $white;
-        background-color: #328ff2;
-        font-weight: bold;
-        border-radius: 2px;
-    }
-
-    @include media-breakpoint-down(sm) {
-        p {
-            font-size: 1.1rem;
+    @include media-breakpoint-down(md) {
+        h2 {
+            font-size: 1.45rem;
         }
-    }
 
-    @include media-breakpoint-down(lg) {
         p {
             font-size: 1rem;
         }
