--- a/scss/_install.scss
+++ b/scss/_install.scss
@@ -4,11 +4,12 @@
     word-break: keep-all;
 
     h2 {
-        font-size: 2rem;
+        font-size: 1.7rem;
     }
 
     p {
         font-size: 1.1rem;
+        margin-bottom: .3rem;
     }
 
     @include media-breakpoint-down(md) {
