--- a/css/creative.css
+++ b/css/creative.css
@@ -10714,7 +10714,9 @@ hr.light {
   overflow: hidden;
 }
 
-.video-container iframe, .video-container object, .video-container embed {
+.video-container iframe,
+.video-container object,
+.video-container embed {
   position: absolute;
   top: 0;
   left: 0;
