--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -141,8 +141,22 @@ hr.light {
   }
 }
 
-.video-container {position:relative; padding-bottom:56.25%; height:0; overflow:hidden;} 
-.video-container iframe,.video-container object,.video-container embed {position:absolute; top:0; left:0; width:100%; height:100%;} 
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 .img-hover-container {
   position: relative;
