--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -190,18 +190,8 @@ header.masthead {
       font-size: 1.8rem;
     }
 
-    video {
-      min-width: auto;
-      min-height: 100%;
-      width: auto;
-      height: 100%;
-    }
-
     .video {
-      min-width: auto;
-      min-height: 100%;
-      width: auto;
-      height: 100%;
+      padding: 0 4%;
     }
   }
 }
