--- a/css/creative.css
+++ b/css/creative.css
@@ -10975,19 +10975,6 @@ header.masthead video {
   transform: translateX(-50%) translateY(-50%);
 }
 
-header.masthead .video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: auto;
-  width: 100%;
-  height: auto;
-  z-index: 0;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
-}
-
 header.masthead .container,
 header.masthead .container-fluid {
   position: relative;
@@ -11027,16 +11014,7 @@ header.masthead .overlay {
     opacity: 1;
   }
   header.masthead video {
-    position: relative;
-    margin-top: 9.5rem;
-    padding: 0 1.5rem;
-    z-index: 5;
-  }
-  header.masthead .video {
-    position: relative;
-    margin-top: 9.5rem;
-    padding: 0 1.5rem;
-    z-index: 5;
+    display: none;
   }
 }
 
@@ -11055,6 +11033,12 @@ header.masthead .overlay {
   }
   header.masthead h2 {
     font-size: 1.8rem;
+  }
+  header.masthead video {
+    min-width: auto;
+    min-height: 100%;
+    width: auto;
+    height: 100%;
   }
 }
 
@@ -11187,3 +11171,4 @@ header.masthead .overlay {
     font-size: 1rem;
   }
 }
+/*# sourceMappingURL=creative.css.map */
