--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -102,21 +102,6 @@ header.masthead {
     transform: translateX(-50%) translateY(-50%);
   }
 
-  .video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: auto;
-    width: 100%;
-    height: auto;
-    z-index: 0;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-  }
-
   .container,
   .container-fluid {
     position: relative;
@@ -158,17 +143,7 @@ header.masthead {
     }
 
     video {
-      position: relative;
-      margin-top: 9.5rem;
-      padding: 0 1.5rem;
-      z-index: 5;
-    }
-
-    .video {
-      position: relative;
-      margin-top: 9.5rem;
-      padding: 0 1.5rem;
-      z-index: 5;
+      display:none;
     }
   }
 
@@ -188,6 +163,12 @@ header.masthead {
 
     h2 {
       font-size: 1.8rem;
+    }
+    video {
+      min-width: auto;
+      min-height: 100%;
+      width: auto;
+      height: 100%;
     }
   }
 }
