모바일에서 유튜브 영상 보이기

--- a/css/creative.css
+++ b/css/creative.css
@@ -11013,6 +11013,9 @@ header.masthead .overlay {
     background-size: cover;
     opacity: 1;
   }
+  header.masthead .youtube_video {
+    display: block !important;
+  }
   header.masthead video {
     display: none;
   }
