--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -142,6 +142,10 @@ header.masthead {
       opacity: 1;
     }
 
+    .youtube_video {
+      display: block !important;
+    }
+
     video {
       display:none;
     }
