--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -53,18 +53,6 @@ header.masthead {
     }
   }
 
-  bw {
-    color: $gray-100;
-    font-weight: 500;
-    opacity: 0.85;
-  }
-
-  b {
-    color: $white;
-    background-color: #328ff2;
-    opacity: 0.85;
-  }
-
   span {
     font-size: 1.2rem;
   }
@@ -119,6 +107,23 @@ header.masthead {
     z-index: 1;
   }
 
+  .usecase-item {
+    color: #ffffff;
+    text-decoration: none;
+    display: block;
+    padding: 10px 20px;
+    background-image: linear-gradient(to right, #{fade-out(rgb(0, 140, 186), 0.2)} 0%, #{fade-out(rgb(0, 140, 186), .5)} 100%);
+    margin-bottom: 10px;
+    cursor: pointer;
+
+    &:focus,
+    &:hover {
+      color: #ffffff;
+      text-decoration: none;
+      background-image: linear-gradient(to right, #{fade-out(rgb(0, 140, 186), 0.05)} 0%, #{fade-out(rgb(0, 140, 186), .3)} 100%);
+    }
+  }
+
   @include media-breakpoint-down(sm) {
     padding-top: 6.5rem !important;
     padding-bottom: 2rem;
@@ -143,7 +148,7 @@ header.masthead {
     }
 
     .youtube_video {
-      display: block !important;
+      display: block;
     }
 
     video {
@@ -156,6 +161,8 @@ header.masthead {
     min-height: 40rem;
     padding-top: $navbar-height;
     padding-bottom: 0;
+
+    
   }
 
 
