--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -152,7 +152,7 @@ header.masthead {
     }
 
     .usecase {
-      margin-top: 1rem;
+      margin: 1rem 1rem 0;
       position: static !important;
     }
   }
