--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -112,15 +112,28 @@ header.masthead {
     text-decoration: none;
     display: block;
     padding: 10px 20px;
-    background-image: linear-gradient(to right, #{fade-out(rgb(0, 140, 186), 0.2)} 0%, #{fade-out(rgb(0, 140, 186), .5)} 100%);
+    
     margin-bottom: 10px;
     cursor: pointer;
+  }
 
+  .usecase-item-blue {
+    background-image: linear-gradient(to right, #{fade-out(rgb(0, 140, 186), 0.2)} 0%, #{fade-out(rgb(0, 140, 186), .5)} 100%);
     &:focus,
     &:hover {
       color: #ffffff;
       text-decoration: none;
       background-image: linear-gradient(to right, #{fade-out(rgb(0, 140, 186), 0.05)} 0%, #{fade-out(rgb(0, 140, 186), .3)} 100%);
+    }
+  }
+
+  .usecase-item-red {
+    background-image: linear-gradient(to left, #{fade-out(rgb(247, 73, 73), 0.2)} 0%, #{fade-out(rgb(247, 73, 73), .5)} 100%);
+    &:focus,
+    &:hover {
+      color: #ffffff;
+      text-decoration: none;
+      background-image: linear-gradient(to left, #{fade-out(rgb(247, 73, 73), 0.05)} 0%, #{fade-out(rgb(247, 73, 73), .3)} 100%);
     }
   }
 
@@ -138,7 +151,7 @@ header.masthead {
     }
 
     .overlay {
-      background: linear-gradient(to bottom, #{fade-out($secondary, .55)} 0%, #{fade-out($secondary, .85)} 100%), url('../img/m_bg.jpg');
+      background: linear-gradient(to bottom, #{fade-out($secondary, .55)} 0%, #{fade-out($secondary, .85)} 100%), url('../img/m_bg.png');
       //background-image: url('../img/m_bg.jpg');
       background-position: center;
       background-repeat: no-repeat;
