사용방법 섹션 추가

--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -19,6 +19,10 @@ header.masthead {
     font-size: 1.7rem;
   }
 
+  h3 {
+    font-size: 1.2rem;
+  }
+
   p {
     font-size: 0.95rem;
     padding-bottom: .5rem;
@@ -148,6 +152,10 @@ header.masthead {
 
     h2 {
       font-size: 1.5rem;
+    }
+
+    h3 {
+      font-size: 1,05rem;
     }
 
     .overlay {
