--- a/scss/creative.scss
+++ b/scss/creative.scss
@@ -14,4 +14,5 @@
 @import "./_install.scss";
 //@import "./_contact.scss";
 //@import "./_mechanism.scss";
-@import "./_solution.scss";
+@import "./_patent_search.scss";
+@import "./_manual.scss";
