--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -3,7 +3,7 @@ body,
 html {
   width: 100%;
   height: 100%;
-  font-family: 'Gothic+A1', sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 // Typography
