--- a/scss/_manual.scss
+++ b/scss/_manual.scss
@@ -7,32 +7,34 @@
 	}
 
 	h2 {
-    color: $black;
+		color: $black;
 		font-size: 2rem;
-  }
-  
-  h3 {
-    font-weight: bold;
-    font-size: 1.5rem;
-    text-decoration: underline;
-  }
+	}
+
+	h3 {
+		font-weight: bold;
+		font-size: 1.5rem;
+		text-decoration: underline;
+	}
 
 	p {
 		font-size: 1.1rem;
 		font-weight: 500;
+		margin-bottom: 0.3rem;
 	}
 
 	@include media-breakpoint-down(md) {
 		h2 {
 			font-size: 1.75rem;
-    }
-    h3 {
-      color: $black;
-      font-weight: bold;
-      font-size: 1.25rem;
-      text-decoration: underline;
-    }
-  
+		}
+
+		h3 {
+			color: $black;
+			font-weight: bold;
+			font-size: 1.25rem;
+			text-decoration: underline;
+		}
+
 
 		p {
 			font-size: 1rem;
