--- a/css/creative.css
+++ b/css/creative.css
@@ -10569,6 +10569,25 @@ html {
   font-family: 'Noto Sans KR', sans-serif;
 }
 
+u {
+  text-decoration: none;
+  padding-bottom: 0px;
+  border-bottom: 3px solid #555555;
+}
+
+ur {
+  text-decoration: none;
+  padding-bottom: 0px;
+  border-bottom: 3px solid red;
+  font-weight: bold;
+}
+
+ug {
+  text-decoration: none;
+  padding-bottom: 0px;
+  border-bottom: 3px dotted #4cc51c;
+}
+
 .text-white-75 {
   color: rgba(255, 255, 255, 0.75);
 }
@@ -11221,7 +11240,6 @@ header.masthead .usecase-item-red:focus, header.masthead .usecase-item-red:hover
 #manual h3 {
   font-weight: bold;
   font-size: 1.5rem;
-  text-decoration: underline;
 }
 
 #manual p {
@@ -11238,7 +11256,6 @@ header.masthead .usecase-item-red:focus, header.masthead .usecase-item-red:hover
     color: #000000;
     font-weight: bold;
     font-size: 1.25rem;
-    text-decoration: underline;
   }
   #manual p {
     font-size: 1rem;
