--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -6,6 +6,25 @@ html {
   font-family: 'Noto Sans KR', sans-serif;
 }
 
+u {
+  text-decoration: none;
+  padding-bottom: 0px;
+  border-bottom: 3px solid $dark;
+}
+
+ur{
+  text-decoration: none;
+  padding-bottom: 0px;
+  border-bottom: 3px solid rgb(255, 0, 0);
+  font-weight: bold;
+}
+
+ug{
+  text-decoration: none;
+  padding-bottom: 0px;
+  border-bottom: 3px dotted rgb(76, 197, 28);
+}
+
 // Typography
 .text-white-75 {
   color: fade-out($white, .25);
